erDiagram
    %% DIMENSIONES
    BI_DIM_TIEMPO {
        int TIEMPO_ID PK "IDENTITY(1,1)"
        int ANIO 
        int CUATRIMESTRE "CHECK(1, 2)"
        int MES
    }

    %% Puedo poner la PK del modelo OLTP
    BI_DIM_SEDE {
        bigint SEDE_ID PK
        varchar SEDE_NOMBRE "length: 255"
    }

    %% Puedo poner la PK del modelo OLTP
    BI_DIM_CATEGORIA_CURSO {
        bigint ID PK "IDENTITY(1,1)"
        varchar CURSO_CATEGORIA "length: 255"
    }

    BI_DIM_TURNO_CURSO {
        bigint ID PK "IDENTITY(1,1)"
        varchar CURSO_TURNO "length: 255"
    }

    BI_DIM_ETARIO_ALUMNO {
        smallint ID PK "IDENTITY(1,1)"
        varchar ALUMNO_RANGO_ETARIO "length: 50"
    }

    BI_DIM_ETARIO_PROFESOR {
        smallint ID PK "IDENTITY(1,1)"
        varchar PROFESOR_RANGO_ETARIO "length: 50"
    }

    BI_DIM_BLOQUES_SATISFACCION {
        int BLOQUE_ID PK "IDENTITY(1,1)"
        varchar BLOQUE_DESCRIPCION "length: 50, CHECK IN (Satisfechos, Neutrales, Insatisfechos)"
    }

    %% Puedo poner la PK del modelo OLTP
    BI_DIM_MEDIO_PAGO {
        int MEDIO_PAGO_ID PK "IDENTITY(1,1)"
        varchar MEDIO_PAGO_NOMBRE "length: 255"
    }

    %% FACTS TABLE
    BI_HECHOS_INSCRIPCION {
        int TIEMPO_ID PK, FK
        bigint SEDE_ID PK, FK
        bigint CATEGORIA_CURSO_ID PK, FK
        bigint TURNO_CURSO_ID PK, FK
        int CANTIDAD_INSCRIPCIONES %% Total de inscripciones
        %% sobre el total de inscripciones
        int CANTIDAD_RECHAZADAS
    }

    BI_DIM_TIEMPO ||--o{ BI_HECHOS_INSCRIPCION : ""
    BI_DIM_SEDE ||--o{ BI_HECHOS_INSCRIPCION : ""
    BI_DIM_CATEGORIA_CURSO ||--o{ BI_HECHOS_INSCRIPCION : ""
    BI_DIM_TURNO_CURSO ||--o{ BI_HECHOS_INSCRIPCION : ""

    BI_HECHOS_CURSO {
        int TIEMPO_ID PK, FK
        bigint SEDE_ID PK, FK
        bigint CATEGORIA_CURSO_ID PK, FK
        int CANTIDAD_APROBADOS
        int CANTIDAD_DESAPROBADOS
        %% Tiempo entre el inicio de la cursada y la aprobación del final
        int SUMA_CANTIDAD_MESES_EN_FINALIZAR
        %% Cantidad de alumnos que finalizaron la cursada
        int CANTIDAD_FINALIZADOS
    }

    BI_DIM_TIEMPO ||--o{ BI_HECHOS_CURSO : ""
    BI_DIM_SEDE ||--o{ BI_HECHOS_CURSO : ""
    BI_DIM_Categoria_Curso ||--o{ BI_HECHOS_CURSO : ""

    BI_HECHOS_EXAMEN_FINAL {
        int TIEMPO_ID PK, FK
        bigint SEDE_ID PK, FK
        bigint CATEGORIA_CURSO_ID PK, FK
        smallint RANGO_ETARIO_ALUMNO_ID PK, FK
        decimal TOTAL_NOTAS "length: 10, 2"
        int TOTAL_EXAMENES_DADOS
        int TOTAL_INSCRIPCIONES_FINAL
        %% porcentaje_ausentes: se calcula a partir de total ausentes y total examenes
        %% NOTA_PROMEDIO_FINAL: se calcula a partir de total notas y total examenes
        %% int TOTAL_AUSENTES
    }

    BI_HECHOS_ENCUESTA{
        int TIEMPO_ID PK, FK
        int ETARIO_PROFESOR_ID PK, FK
        smallint BLOQUE_SATISFACCION_ID PK, FK
        bigint SEDE_ID PK, FK
        int TOTAL_ENCUESTAS
        %% TOTAL ENCUESTAS DE TODOS LOS BLOQUES DE SATISFACCION SE HACE EN LA VISTA y ahí
        %% calculo el porcentaje SATISFECHOS o INSATISFECHOS
    }

    BI_HECHOS_PAGOS {
        int TIEMPO_ID PK, FK
        decimal TOTAL_FACTURADO "length: 18, 2"
        decimal TOTAL_PAGADO "length: 18, 2"
        %% decimal TOTAL_ADEUDADO "length: 18, 2" = TOTAL_FACTURADO - TOTAL_PAGADO
        int PAGOS_FUERA_TERMINO
        int TOTAL_PAGOS_EN_TERMINO
    }

    BI_HECHOS_INGRESOS {
        int TIEMPO_ID PK, FK
        bigint CATEGORIA_CURSO_ID PK, FK
        bigint SEDE_ID PK, FK
        decimal TOTAL_INGRESOS "length: 18, 2"
    }
    BI_DIM_TIEMPO ||--o{ BI_HECHOS_INGRESOS : ""
    BI_DIM_Categoria_Curso ||--o{ BI_HECHOS_INGRESOS : ""
    BI_DIM_SEDE ||--o{ BI_HECHOS_INGRESOS : ""

    BI_HECHOS_AUSENTISMO_FINAL {
        int TIEMPO_ID PK, FK
        bigint SEDE_ID PK, FK
        int TOTAL_INSCRIPCIONES
        int TOTAL_AUSENTES
    }

     BI_DIM_TIEMPO ||--o{ BI_HECHOS_EXAMEN_FINAL : ""
    BI_DIM_Categoria_Curso ||--o{ BI_HECHOS_EXAMEN_FINAL : ""
    BI_DIM_ETARIO_ALUMNO ||--o{ BI_HECHOS_EXAMEN_FINAL : ""

    BI_DIM_TIEMPO ||--o{ BI_HECHOS_AUSENTISMO_FINAL : ""
    BI_DIM_SEDE ||--o{ BI_HECHOS_AUSENTISMO_FINAL : ""

    BI_DIM_TIEMPO ||--o{ BI_HECHOS_ENCUESTA : ""
    BI_DIM_ETARIO_PROFESOR ||--o{ BI_HECHOS_ENCUESTA : ""
    BI_DIM_BLOQUES_SATISFACCION ||--o{ BI_HECHOS_ENCUESTA : ""
    BI_DIM_SEDE ||--o{ BI_HECHOS_ENCUESTA : ""

    BI_DIM_TIEMPO ||--o{ BI_HECHOS_PAGOS : ""